using UnityEngine;

namespace Scripts.Enemy
{
    public static class EnemyAnimationStrings 
    {
        public static string m_Idle = "Idle";
        public static string m_FaceDirX = "FaceDir_X";
        public static string m_FaceDirY = "FaceDir_Y";
        public static string m_IsMoving = "Moving";
        public static string m_Stun = "Stun";
        public static string m_Death = "Death";
    }
}
