public static class PlayerAnimationStrings 
{
    static public string m_Idle = "Idle";
    static public string m_Move = "Move";
    static public string m_Death = "Death";
    static public string m_Dodge = "Dodge";
    static public string m_FallDeath = "FallDeath";
    static public string m_IsMoving = "Moving";
    static public string m_FaceDirX = "FaceDir_X";
    static public string m_FaceDirY = "FaceDir_Y";
}
